# rocket-service

./: Cargo.toml
libservices/: Cargo.toml
libservices_codegen/: Cargo.toml
libservices_codegen/src/: attachable_service.rs
